fix: fix problem with tap switcher visibility in different cases

--- a/nonograms/src/sass/base/_buttons.scss
+++ b/nonograms/src/sass/base/_buttons.scss
@@ -30,6 +30,10 @@
   background-color: #ffe23e;
 }
 
+.btn:disabled {
+  background-color: #f1e494;
+}
+
 .btn:disabled:hover,
 .btn:disabled:focus {
   pointer-events: none;
